--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
                  android:layout_weight="2"/>
            <fragment
 				 android:id="@+id/id_fragment_content"
-				 android:name="com.example.imonitor.ContentFragment"
+				 android:name="com.example.imonitor.MonitorFragment"
                  style="@style/layout_horizontal"
                  android:background="#00aa00"
                  android:layout_weight="6"/>    
