--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -11,9 +11,9 @@
                  style="@style/layout_horizontal"
                  android:background="#aa0000"
                  android:layout_weight="2"/>
-           <fragment
+           <FrameLayout
 				 android:id="@+id/id_fragment_content"
-				 android:name="com.example.imonitor.MonitorFragment"
+				 
                  style="@style/layout_horizontal"
                  android:background="#00aa00"
                  android:layout_weight="6"/>    
