login...optimize the main activity ui,gonna sleep

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -38,4 +38,10 @@
 	  <style name="layout_vertical" parent="layout_full">  
 	    <item name="android:layout_height">0px</item>  
 	  </style> 
+	  
+	<style name="LoginFormContainer">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:padding">16dp</item>
+    </style>
 </resources>
