--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,23 +1,42 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        style="@style/layout_full"
-        android:orientation="vertical">
+    style="@style/layout_full"
+    android:layout_width="match_parent"
+    android:orientation="vertical" >
+
         <LinearLayout 
                 style="@style/layout_vertical"
                 android:layout_weight="1"
                 android:orientation="horizontal">
          	<fragment
 				 android:id="@+id/id_fragment_title"
-				 android:name="com.example.imonitor.TitleFragment"
+				 android:name="com.example.imonitor.fragment.TitleFragment"
                  style="@style/layout_horizontal"
-                 android:background="#aa0000"
-                 android:layout_weight="1"/>
-           <FrameLayout
-				 android:id="@+id/id_fragment_content"
-				 
-                 style="@style/layout_horizontal"
-                 android:background="#00aa00"
-                 android:layout_weight="5"/>    
-                 </LinearLayout>   
+                 android:background="#F0F0F0"
+                 android:layout_width="match_parent"
+                 android:layout_height="match_parent"
+                  android:layout_weight="5"/>
+     	 	<LinearLayout 
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <fragment
+                    android:id="@+id/fragment_sub_title"
+                    android:name="com.example.imonitor.fragment.SubTitleFragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="6"
+                    android:background="#F0F0F0" />
+
+	           <FrameLayout
+					 android:id="@+id/id_fragment_content"
+	                 android:background="#00F0F0"
+	                 android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+	                 android:layout_weight="1"/>    
+	                 </LinearLayout>   
+            </LinearLayout>
 </LinearLayout> 
     
 
