--- a/res/layout/fragment_account.xml
+++ b/res/layout/fragment_account.xml
@@ -4,10 +4,21 @@
     android:orientation="vertical" >
 
     
-    <TextView
+    
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+        <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="account" />
+    </RelativeLayout>
 
+    <ListView
+	        android:id="@+id/account_info_list"
+	        android:layout_width="match_parent"
+	        android:layout_height="match_parent" >
+	    </ListView>
 </LinearLayout>
